YARP-193 Updated API URL with production value

--- a/tutorials/python/Making an API Call.ipynb
+++ b/tutorials/python/Making an API Call.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +105,9 @@
     "        } for content in text]\n",
     "\n",
     "def call_receptiviti_api(text, call_type=\"single\"):\n",
-    "    API_URL = 'https://scorched-earth.truehorizon.net/v1/score'\n",
+    "    API_URL = 'https://api.receptiviti.com/v1/score'\n",
     "    if call_type==\"bulk\":\n",
-    "        API_URL = 'https://scorched-earth.truehorizon.net/v1/score/bulk'\n",
+    "        API_URL = 'https://api.receptiviti.com/v1/score/bulk'\n",
     "    payload = get_payload(text, call_type)\n",
     "    results = []\n",
     "    if len(payload)>0:\n",
