--- a/tutorials/python/Making an API Call.ipynb
+++ b/tutorials/python/Making an API Call.ipynb
@@ -9,11 +9,11 @@
     "Are you looking for a quick snippet or two to make a call to the Receptiviti API?\n",
     "You've come to the right place!\n",
     "\n",
-    "This jupyter notebook will get you started with code to simplify calling the API.\n",
+    "This Jupyter Notebook will get you started with code to simplify calling the API.\n",
     "Let's begin with\n",
     "\n",
     "## Step 1 - Your API Keys\n",
-    "**Don't forget to add your api key and secret into the following cell**"
+    "**Don't forget to add your API key and secret into the following cell**"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## If using conda\n",
+    "## If using Conda\n",
     "Uncomment the cell below and run"
    ]
   },
