YARP-337 Simplified call helper

--- a/tutorials/python/Making an API Call.ipynb
+++ b/tutorials/python/Making an API Call.ipynb
@@ -87,40 +87,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import requests\n",
     "\n",
-    "def get_payload(text, call_type=\"single\"):\n",
+    "API_URL = 'https://api.receptiviti.com/v1/score'\n",
+    "\n",
+    "def get_payload_and_url(text):\n",
     "    if len(text)<1:\n",
     "        print(\"ERROR: 'text' should not be empty\")\n",
     "        return {}\n",
-    "    if call_type==\"single\":\n",
-    "        if type(text)==list:\n",
-    "            print(\"WARNING: 'text' argument is a list and incompatible with a single call.\\nUsing only the first element to construct the payload\")\n",
-    "            text = text[0]\n",
-    "        return {\n",
+    "    if isinstance(text, str):\n",
+    "        return ({\n",
     "                    \"content\": text\n",
-    "                }\n",
-    "    if call_type==\"bulk\":\n",
-    "        if type(text)!=list:\n",
-    "            print(\"WARNING: 'text' argument is not a list and incompatible with a bulk call.\\nConverting 'text' to a list of length 1\")\n",
-    "            text = [text]\n",
-    "        return [{\n",
+    "                }, API_URL)\n",
+    "    if isinstance(text, list):\n",
+    "        return ([{\n",
     "                    \"content\": content\n",
-    "        } for content in text]\n",
+    "        } for content in text], API_URL + '/bulk')\n",
     "\n",
-    "def call_receptiviti_api(text, call_type=\"single\"):\n",
-    "    API_URL = 'https://api.receptiviti.com/v1/score'\n",
-    "    if call_type==\"bulk\":\n",
-    "        API_URL = 'https://api.receptiviti.com/v1/score/bulk'\n",
-    "    payload = get_payload(text, call_type)\n",
+    "def call_receptiviti_api(text):\n",
+    "    payload, url = get_payload_and_url(text)\n",
     "    results = []\n",
     "    if len(payload)>0:\n",
-    "        response = requests.post(API_URL, data=json.dumps(payload), auth=(API_KEY, API_SECRET), headers = {'Content-Type': 'application/json'})\n",
+    "        response = requests.post(url, data=json.dumps(payload), auth=(API_KEY, API_SECRET), headers = {'Content-Type': 'application/json'})\n",
     "        if response.status_code==200:\n",
     "            results = response.json()\n",
     "    return results"
@@ -135,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,12 +142,12 @@
      "data": {
       "text/plain": [
        "{'plan_usage': {'word_limit': 250000,\n",
-       "  'words_used': 2712,\n",
-       "  'words_remaining': 247288,\n",
-       "  'percent_used': 1.08,\n",
+       "  'words_used': 5747,\n",
+       "  'words_remaining': 244253,\n",
+       "  'percent_used': 2.3,\n",
        "  'start_date': '2021-01-01T00:00:00Z',\n",
        "  'end_date': '2021-01-31T23:59:59Z'},\n",
-       " 'results': [{'response_id': '56a0e62e-976f-4873-89f2-fcd503062376',\n",
+       " 'results': [{'response_id': '10455256-9e4e-4a3f-951b-b2a116a02ecc',\n",
        "   'language': 'en',\n",
        "   'version': 'v1.0.0',\n",
        "   'summary': {'word_count': 4,\n",
@@ -174,7 +167,7 @@
        "    'all_punctuation': 0.25,\n",
        "    'ambifeel': 0,\n",
        "    'amusement': 0,\n",
-       "    'analytical_thinking': 0.01,\n",
+       "    'analytical_thinking': 0,\n",
        "    'anger': 0,\n",
        "    'anger_words': 0,\n",
        "    'anxiety_words': 0,\n",
@@ -188,10 +181,10 @@
        "    'body': 0,\n",
        "    'boredom': 0,\n",
        "    'calmness': 0,\n",
-       "    'causation': 0.25,\n",
+       "    'causation': 0,\n",
        "    'certainty': 0,\n",
        "    'clout': 0.99,\n",
-       "    'cognitive_processes': 0.25,\n",
+       "    'cognitive_processes': 0,\n",
        "    'colons': 0,\n",
        "    'commas': 0,\n",
        "    'comparisons': 0,\n",
@@ -216,7 +209,7 @@
        "    'filler_words': 0,\n",
        "    'focus_future': 0,\n",
        "    'focus_past': 0,\n",
-       "    'focus_present': 0.25,\n",
+       "    'focus_present': 0,\n",
        "    'friends': 0,\n",
        "    'function_words': 0.75,\n",
        "    'goodfeel': 0,\n",
@@ -330,7 +323,7 @@
        "    'trusting': 72.05779027759215}}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,12 +357,12 @@
      "data": {
       "text/plain": [
        "{'plan_usage': {'word_limit': 250000,\n",
-       "  'words_used': 2723,\n",
-       "  'words_remaining': 247277,\n",
-       "  'percent_used': 1.09,\n",
+       "  'words_used': 5758,\n",
+       "  'words_remaining': 244242,\n",
+       "  'percent_used': 2.3,\n",
        "  'start_date': '2021-01-01T00:00:00Z',\n",
        "  'end_date': '2021-01-31T23:59:59Z'},\n",
-       " 'results': [{'response_id': '2617ac26-7c79-457b-8348-1134d564000f',\n",
+       " 'results': [{'response_id': 'a677fe67-9def-4e37-b78b-e21bef9174b0',\n",
        "   'language': 'en',\n",
        "   'version': 'v1.0.0',\n",
        "   'summary': {'word_count': 4,\n",
@@ -543,7 +536,7 @@
        "    'social': 100,\n",
        "    'stress_prone': 80.44593613238416,\n",
        "    'trusting': 72.05779027759215}},\n",
-       "  {'response_id': '36cc6c82-f5bd-44eb-bd1d-49e432b7bec5',\n",
+       "  {'response_id': '9e3d7737-4b0c-4664-8270-335b7cbbfb9e',\n",
        "   'language': 'en',\n",
        "   'version': 'v1.0.0',\n",
        "   'summary': {'word_count': 7,\n",
@@ -719,7 +712,7 @@
        "    'trusting': 74.62096062312882}}]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +722,7 @@
     "result = call_receptiviti_api([\n",
     "                                \"Hi, How are you?\", \n",
     "                                \"Hello world! I love icecream and watermelons!\"\n",
-    "                            ], call_type=\"bulk\")\n",
+    "                            ])\n",
     "result"
    ]
   },
