YARP-337 Updated getting started with sallee

--- a/tutorials/python/Getting Started.ipynb
+++ b/tutorials/python/Getting Started.ipynb
@@ -639,7 +639,7 @@
     "if len(single_dictionary_measures_df)>0:\n",
     "    display(single_dictionary_measures_df)\n",
     "else: \n",
-    "    print(\"If you are seeing this message, it's because your plan does not include the LIWC or SALLEE packages\")\n",
+    "    print(\"If you are seeing this message, it's because your plan does not include one or both of LIWC or SALLEE packages\")\n",
     "print(\"Receptiviti Measures as a table\")\n",
     "if len(single_receptiviti_measures_df)>0:\n",
     "    display(single_receptiviti_measures_df)\n",
