YARP-337 Updated Aggregating liwc scores

--- a/tutorials/python/Getting Started with SALLEE.ipynb
+++ b/tutorials/python/Getting Started with SALLEE.ipynb
@@ -22,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "API_KEY = ''\n",
-    "API_SECRET = ''"
+    "API_SECRET = ''\n",
+    "API_URL = 'https://api.receptiviti.com/v1/score'"
    ]
   },
   {
@@ -625,8 +626,6 @@
    "source": [
     "import json\n",
     "import requests\n",
-    "\n",
-    "API_URL = 'https://api.receptiviti.com/v1/score'\n",
     "\n",
     "def get_payload_and_url(text, request_id):\n",
     "    payload_url_tup = ({}, '')\n",
