--- a/tutorials/python/Making an API Call.ipynb
+++ b/tutorials/python/Making an API Call.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "API_KEY = ''\n",
-    "API_SECRET = ''"
+    "API_SECRET = ''\n",
+    "API_URL = 'https://api.receptiviti.com/v1/score'"
    ]
   },
   {
@@ -93,8 +94,6 @@
    "source": [
     "import json\n",
     "import requests\n",
-    "\n",
-    "API_URL = 'https://api.receptiviti.com/v1/score'\n",
     "\n",
     "def get_payload_and_url(text):\n",
     "    if len(text)<1:\n",
