YARP-412 Fixed incorrect links in tutorials after changes to docs for /framework

--- a/tutorials/python/Making an API Call.ipynb
+++ b/tutorials/python/Making an API Call.ipynb
@@ -733,9 +733,9 @@
     "\n",
     "Thanks for running through this tutorial with us! Now that you have scores from the Receptiviti API at your disposal, go ahead and check out some of the other tutorials on deriving insight from them. \n",
     "\n",
-    "Check out our [Getting Started guide here](https://github.com/Receptiviti/api_tutorials_demos/blob/master/tutorials/python/Getting%20Started.ipynb) \n",
+    "Check out our [Getting Started guide here](https://github.com/Receptiviti/api_tutorials_demos/blob/main/tutorials/python/Getting%20Started.ipynb)\n",
     "\n",
-    "Check out our other [tutorials and demos here](https://dashboard.receptiviti.com/docs/tutorials)"
+    "Check out our other [tutorials here](https://dashboard.receptiviti.com/docs/tutorials)"
    ]
   },
   {
