language and naming edits

--- a/tutorials/python/API Call Demo Project.ipynb
+++ b/tutorials/python/API Call Demo Project.ipynb
@@ -6,13 +6,10 @@
    "source": [
     "# Welcome to Receptiviti!\n",
     "\n",
-    "Are you looking for a quick snippet or two to make a call to the Receptiviti API?\n",
-    "You've come to the right place!\n",
-    "\n",
     "This Jupyter Notebook will get you started with code to simplify calling the API.\n",
-    "Let's begin with\n",
     "\n",
     "## Step 1 - Your API Keys\n",
+    "\n",
     "**Don't forget to add your API key and secret into the following cell**"
    ]
   },
@@ -747,22 +744,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.5 64-bit",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": ""
   }
  },
  "nbformat": 4,
